fix: fix kapt issues